# MLCP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: codeql.yml
config/: agentic_kernel.yaml  context_packet.yaml  mlcp.yaml
docs/: agent_lifecycle.md  agentic_kernel.md  agents.md  layers.md  telemetry.md
examples/: sprint_flow.md
rfcs/: 000-template.md
src/mlcp/: __init__.py
src/mlcp/api/: db.py  main.py  models.py  plan_normalize.py  plan_store.py  plan_validate.py  repo.py
src/mlcp/api/routes/: __init__.py  plan.py  runs.py
src/mlcp/common/: __init__.py  boot.py  env.py  logger.py
src/mlcp/context/: main.py
src/mlcp/kernel/: main.py
src/mlcp/registry/: main.py
src/mlcp/telemetry/: main.py
